--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.3",
     "@tailwindcss/vite": "^4.0.3",
+    "@tanstack/react-query": "^5.66.0",
     "ethers": "^6.13.5",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
-    "tailwindcss": "^4.0.3"
+    "recharts": "^2.15.1",
+    "tailwindcss": "^4.0.3",
+    "viem": "^2.22.22",
+    "wagmi": "^2.14.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
